# schemas

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.CI  dupa.py  pyproject.toml  readme.md  setup.cfg
package/schemas/: __init__.py  get_schema.py  predefined.py  types.py
schemas/: __init__.py  _case.py  _convert_msgspect_inspect_to_type.py  _exclude_json_schema_toolset.py  _json_schema.py  _operation_objects.py  _preconfigured_base_model.py  application_operation.py  base.py  coders.py  convert.py  decoders.py  encoders.py  errors.py  example.py  filter.py  get_schema.py  hive_constants.py  hive_factory.py  hive_fields_basic_schemas.py  hive_fields_custom_schemas.py  jsonrpc.py  jsonrpc_constants.py  operation.py  operation_objects.py  operations.py  operations_strict.py  optional_response.py  policies.py  preconfigured_base_model.py  responses.py  transaction.py  virtual_operation.py  virtual_operations.py
schemas/__private/: __init__.py  hive_constants.py  hive_factory.py  hive_fields_basic_schemas.py  hive_fields_custom_schemas.py  hive_fields_schemas.py  hive_fields_schemas_strict.py  operation.py  operation_objects.py  preconfigured_base_model.py  virtual_operation.py
schemas/account_by_key_api/: response_schemas.py  responses_from_api.py
schemas/account_history_api/: fundaments_of_responses.py  response_schemas.py
schemas/beekeeper_api/: fundaments_of_responses.py  response_schemas.py
schemas/block_api/: fundaments_of_responses.py  response_of_schemas.py  response_schemas.py
schemas/clive/: base.py  get_default_from_model.py  validate_schema_field.py
schemas/condenser_api/: fundaments_of_responses.py  response_schemas.py
schemas/custom_operations/: base.py  follow_operation.py  json_convertible.py
schemas/database_api/: __init__.py  fundaments_of_reponses.py  response_schemas.py
schemas/debug_node_api/: response_schemas.py
schemas/dump_options/: options.py
schemas/fields/: _init_validators.py  basic.py  compound.py  custom.py  hex.py  hive_datetime.py  hive_int.py  hive_list.py  hive_string_int.py  hive_string_uint.py  integers.py  json_string.py  resolvables.py  serializable.py  version.py
schemas/jsonrpc/: response_schemas.py
schemas/jsonrpc_models/: diagnostic  generate_jsonrpc_models.py  jsonrpc_models.py  processed.calltree  profile_data.pyprof  profile_data_2.pyprof  profile_data_3.pyprof  profile_results.txt
schemas/market_history_api/: fundaments_of_responses.py  response_schemas.py
schemas/network_node_api/: __init__.py  fundaments_of_responses.py  response_schemas.py
schemas/notification_model/: __init__.py  notification.py
schemas/notifications/: __init__.py  _known_notifications.py  known_notification.py  notification.py
schemas/operations/: __init__.py  _operation_representation_types.py  _operation_type.py  _operation_types.py  account_create_operation.py  account_create_with_delegation_operation.py  account_update2_operation.py  account_update_operation.py  account_witness_proxy_operation.py  account_witness_vote_operation.py  cancel_transfer_from_savings_operation.py  change_recovery_account_operation.py  claim_account_operation.py  claim_reward_balance_operation.py  collateralized_convert_operation.py  comment_operation.py  comment_options_operation.py  convert_operation.py  create_claimed_account_operation.py  create_proposal_operation.py  custom_binary_operation.py  custom_json_operation.py  custom_operation.py  decline_voting_rights_operation.py  delegate_rc_operation.py  delegate_vesting_shares_operation.py  delete_comment_operation.py  escrow_approve_operation.py  escrow_dispute_operation.py  escrow_release_operation.py  escrow_transfer_operation.py  feed_publish_operation.py  follow_operation.py  generate_representation_types.py  limit_order_cancel_operation.py  limit_order_create2_operation.py  limit_order_create_operation.py  pow2_operation.py  pow_operation.py  recover_account_operation.py  (+20 more)
schemas/policies/: __init__.py  disable_swap_types.py  extra_fields.py  missing_fields_in_get_config.py  policy.py  testnet_assets.py
schemas/rc_api/: fundaments_of_responses.py  response_schemas.py
schemas/reputation_api/: response_schemas.py
schemas/transaction_model/: transaction.py
schemas/transaction_status_api/: fundaments_of_responses.py  response_schemas.py
schemas/wallet_bridge_api/: fundaments_of_responses.py  response_schemas.py
scripts/: build-ci-base-image.sh  push-ci-base-image.sh
tests/: conftest.py  hive_tests_constants.py  pytest.ini  test_asset_conversion.py  test_content_jsonrpc_models.py  test_custom_schemas.py  test_fundamental_schemas.py  test_hive_fields.py  test_hive_fields_2.py  test_hive_operation.py  test_operations.py  test_playground.py  test_playground_copy.py  test_schema_comparison.py  test_schema_modification.py  test_skip_json_schema.py
tests/test_account_by_key_api/: response_from_api.py  test_account_by_key_api_response_schemas.py
tests/test_account_history_api/: responses_from_api.py  test_account_history_api_responses_schemas.py
tests/test_api_generator/: api_collection_definition.py  api_definition.py  api_definition_params_result.py  api_definition_swagger.py  base_api_classes.py  conftest.py  generate_clients_and_collections.py  generate_needed_modules.py  messages.py  openapi.json  test_collection_generator.py  test_generation_from_swagger.py  test_single_class_generator.py
tests/test_block_api/: resonse_schemas.py  test_block_api_schemas.py
tests/test_condenser_api/: responses_from_api.py  test_condenser_api_schemas.py
tests/test_custom_operations/: helpers.py  test_custom_operation.py  test_follow_operation.py
tests/test_database_api/: reponses_from_api.py  responses_from_api.py  test_database_api_responses_schemas.py
tests/test_market_history_api/: response_schemas.py  test_market_history_api_response_schemas.py
tests/test_operation_extensions/: test_recurrent_transfer_extensions.py
tests/test_rc_api/: reponses_from_api.py  test_rc_api_responses_schemas.py
tests/unit/: test_account_name.py  (+11 more)
(+510 files in other folders)
