[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "hiveio-schemas"
description = "Tools for checking if message fits expected format"
dynamic = ["version"]
readme = "readme.md"
authors = [
    { name = "Michał Kudela", email = "kudmich@syncad.com" },
]
requires-python = ">=3.12,<4"
dependencies = [
    "msgspec (>=0.20.0)",
]

[project.urls]
repository = "https://gitlab.syncad.com/hive/clive"

[tool.poetry]
requires-poetry = "2.1.3"
packages = [
    { include = "schemas" },
]
version = "0.0.0"

[tool.poetry.group.static-analysis.dependencies]
mypy = ">=1.19.1"
ruff = ">=0.14.10"
pre-commit = ">=4.5.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-asyncio = ">=0.26.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '''v?(?P<base>\d+\.\d+\.\d+)\-?(?:(?P<stage>[a-zA-Z0-9]+)(?P<revision>\d+))?$'''

format-jinja = """
    {%- set dirty_postfix = '.dirty' if dirty else '' -%}
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "schemas/__init__.py",
]


[tool.mypy]
strict = true
strict_equality_for_none = true
disallow_untyped_decorators = false
python_version = 3.12


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [  # https://beta.ruff.rs/docs/rules/
    "F",
    "E",
    "W",
    "C",
    "I",
    "N",
    "UP",
    "BLE",
    "B",
    "A",
    "C4",
    "PIE",
    "T20",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "RUF",
    "UP",
]
ignore = [
    "TCH001", # prevents types used in schema struct declarations from being moved under TYPE_CHECKING
    "E501", # line too long, handled by black
    "TRY003", # too restrictive
]

[tool.ruff.lint.isort]
known-first-party = ["schemas"]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:"
