[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "hiveio-schemas"
description = "Tools for checking if message fits expected format"
dynamic = ["version"]
readme = "readme.md"
authors = [
    { name = "Michał Kudela", email = "kudmich@syncad.com" },
]
requires-python = ">=3.12,<4"
dependencies = [
    "msgspec (>=0.20.0)",
]

[project.urls]
repository = "https://gitlab.syncad.com/hive/clive"

[tool.poetry]
requires-poetry = "2.1.3"
packages = [
    { include = "schemas" },
]
version = "0.0.0"

[tool.poetry.group.static-analysis.dependencies]
mypy = ">=1.19.1"
ruff = ">=0.14.10"
pre-commit = ">=4.5.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5"
pytest-asyncio = ">=0.26.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"
# PEP 440 compliant versioning with .post{timestamp}
# https://peps.python.org/pep-0440/
#
# Version examples (assuming last tag is 1.2.3rc1):
#   Tag (distance=0, clean):       1.2.3rc1
#   Tag (distance=0, dirty):       1.2.3rc1+dirty
#   develop (distance>0):          1.2.3rc1.post20260129082556
#   develop (dirty):               1.2.3rc1.post20260129082556+dirty
#   feature branch (distance>0):   1.2.3rc1.post20260129082556+unstable
#   feature branch (dirty):        1.2.3rc1.post20260129082556+unstable.dirty
#   feature branch (distance=0):   1.2.3rc1  (same as tag)
#
# Logic:
#   - distance=0         -> exact tag version
#   - distance>0         -> tag + .post{timestamp}
#   - distance>0, unstable -> + 'unstable' marker
#   - dirty              -> + 'dirty' marker
#
# Stability detection:
#   - stable: develop/master/main branches OR tag checkout (detached HEAD with distance=0)
#   - unstable: feature branches OR detached HEAD with distance>0
#   - CI: GitLab checks out as detached HEAD, so branch is None;
#     use CI_COMMIT_REF_NAME env var as fallback for branch detection
format-jinja = """
    {%- set is_on_tag = branch is none and distance == 0 -%}
    {%- set effective_branch = branch if branch else env.get('CI_COMMIT_REF_NAME') -%}
    {%- set is_stable = effective_branch in ['develop', 'master', 'main'] or is_on_tag -%}
    {%- set post = timestamp|int if distance > 0 else none -%}

    {%- set local_parts = ['unstable'] if not is_stable and distance > 0 else [] -%}
    {%- set local_parts = local_parts + ['dirty'] if dirty else local_parts -%}

    {{ serialize_pep440(base, stage, revision, post=post, metadata=local_parts) }}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "schemas/__init__.py",
]


[tool.mypy]
strict = true
strict_equality_for_none = true
disallow_untyped_decorators = false
python_version = 3.12


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [  # https://beta.ruff.rs/docs/rules/
    "F",
    "E",
    "W",
    "C",
    "I",
    "N",
    "UP",
    "BLE",
    "B",
    "A",
    "C4",
    "PIE",
    "T20",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "RUF",
    "UP",
]
ignore = [
    "TCH001", # prevents types used in schema struct declarations from being moved under TYPE_CHECKING
    "E501", # line too long, handled by black
    "TRY003", # too restrictive
]

[tool.ruff.lint.isort]
known-first-party = ["schemas"]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:"
