[metadata]
name = schemas
description = Tools for checking if message fits expected format
author = Michał Kudela
author_email = kudmich@syncad.com

[options]
package_dir = =package
packages = find:
python_requires = >=3.10
install_requires=
    jsonschema==4.4.0

[options.packages.find]
where = package

[options.extras_require]
test = pytest==7.1.2
